Fixing Books layout problem

--- a/public/main.css
+++ b/public/main.css
@@ -18,5 +18,5 @@ body{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: baseline;
+  align-items: center;
 }
